<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/size_10_dp"
    android:layout_marginTop="@dimen/size_40_dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_username_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_username_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="Sans-Serif"
            android:textStyle="normal"
            android:textSize="@dimen/size_14_sp"
            android:inputType="textPersonName"
            android:textColor="@color/color_87000000"
            android:hint="@string/text_username"
            android:textColorHint="@color/color_38000000"
            android:maxLines="1"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_password_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_password_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="Sans-Serif"
            android:textStyle="normal"
            android:textSize="@dimen/size_14_sp"
            android:inputType="textPassword"
            android:textColor="@color/color_87000000"
            android:hint="@string/text_password"
            android:textColorHint="@color/color_38000000"
            android:maxLines="1"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.ButtonBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="Sans-Serif"
            android:textStyle="bold"
            android:textSize="@dimen/size_14_sp"
            android:textColor="@color/color_87000000"
            android:text="@string/text_login"/>
    </android.support.v7.widget.ButtonBarLayout>

    <TextView
        android:id="@+id/login_link_to_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_10_dp"
        android:layout_gravity="center_horizontal"
        android:fontFamily="Sans-Serif"
        android:textStyle="bold"
        android:textColor="@color/color_87000000"
        android:textSize="@dimen/size_14_sp"
        android:text="@string/text_link_to_register"/>

</LinearLayout>
