<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/size_30_dp"
    android:padding="@dimen/size_10_dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_first_name_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/register_first_name_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="Sans-Serif"
                android:textStyle="normal"
                android:textSize="@dimen/size_14_sp"
                android:inputType="textPersonName"
                android:textColor="@color/color_87000000"
                android:hint="@string/text_first_name"
                android:textColorHint="@color/color_38000000"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_last_name_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_10_dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/register_last_name_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="Sans-Serif"
                android:textStyle="normal"
                android:textSize="@dimen/size_14_sp"
                android:inputType="textPersonName"
                android:textColor="@color/color_87000000"
                android:hint="@string/text_last_name"
                android:textColorHint="@color/color_38000000"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_username_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_10_dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/register_username_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="Sans-Serif"
                android:textStyle="normal"
                android:textSize="@dimen/size_14_sp"
                android:inputType="textPersonName"
                android:textColor="@color/color_87000000"
                android:hint="@string/text_username"
                android:textColorHint="@color/color_38000000"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_email_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_10_dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/register_email_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="Sans-Serif"
                android:textStyle="normal"
                android:textSize="@dimen/size_14_sp"
                android:inputType="textEmailAddress"
                android:textColor="@color/color_87000000"
                android:hint="@string/text_email"
                android:textColorHint="@color/color_38000000"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_password_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_10_dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/register_password_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="Sans-Serif"
                android:textStyle="normal"
                android:textSize="@dimen/size_14_sp"
                android:inputType="textPassword"
                android:textColor="@color/color_87000000"
                android:hint="@string/text_password"
                android:textColorHint="@color/color_38000000"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.ButtonBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_10_dp"
            android:gravity="center">

            <Button
                android:id="@+id/register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="Sans-Serif"
                android:textStyle="bold"
                android:textSize="@dimen/size_14_sp"
                android:textColor="@color/color_87000000"
                android:text="@string/text_register"/>
        </android.support.v7.widget.ButtonBarLayout>

        <TextView
            android:id="@+id/register_link_to_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_10_dp"
            android:layout_gravity="center_horizontal"
            android:fontFamily="Sans-Serif"
            android:textStyle="bold"
            android:textColor="@color/color_87000000"
            android:textSize="@dimen/size_14_sp"
            android:text="@string/text_link_to_login"/>

    </LinearLayout>
</ScrollView>
